# GeneralsGameCode

./: CMakeLists.txt  CMakePresets.json  README.md  TESTING.md  vcpkg-lock.json  vcpkg.json
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/Tools/Autorun/: AUTORUN.RC
Core/Tools/Babylon/: Babylon.rc
Core/Tools/DebugWindow/: CMakeLists.txt  DebugWindow.rc
Core/Tools/ImagePacker/Resource/: ImagePacker.rc
Core/Tools/Launcher/: launcher1.rc
Core/Tools/MapCacheBuilder/Source/: WinMain.cpp
Core/Tools/PATCHGET/: SCRIPT1.RC
Core/Tools/ParticleEditor/: CMakeLists.txt  ParticleEditor.rc
Core/Tools/W3DView/: W3DView.rc
Core/Tools/WW3D/max2w3d/: max2w3d.rc
Core/Tools/textureCompress/: textureCompress.rc
Core/Tools/wolSetup/: wolSetup.rc
Dependencies/DejaInsight/: .gitignore  DejaDLL.Win32.lib  DejaDLL.h  DejaLib.Win32.lib  DejaPrivate.h  ReleaseNotes.html
Dependencies/DejaInsight/Demos/Script-to-Context/: Script-to-Context.cpp  Script-to-Context.sln  Script-to-Context.vcproj
Dependencies/DejaInsight/Demos/Script-to-Trace/: Script-to-Trace.cpp  Script-to-Trace.sln  Script-to-Trace.vcproj
Dependencies/DejaInsight/Demos/TinyEngine/: TinyEngine.vcproj  app.cpp  color.h  engine.h  engine_ps3.cpp  engine_wii.cpp  engine_win32.cpp  engine_x360.cpp  graphics.h  graphics_common.cpp  graphics_gl.cpp  graphics_gl.h  graphics_ps3.cpp  (+12 more)
Dependencies/DejaInsight/Documentation/: DejaInsight.chm  DejaInsight.chw  EULA.rtf
Dependencies/DejaInsight/UWP/: DejaLib.h  DejaPrivate.h  GetLatest.bat
Dependencies/DejaInsight/include/: DejaLib.h  DejaPrivate.h
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/Libraries/: CMakeLists.txt
Generals/Code/Main/: CMakeLists.txt  RTS.RC  WinMain.cpp  WinMain.h  resource.h
Generals/Code/Tools/: CMakeLists.txt
GeneralsMD/: .gitignore  CMakeLists.txt
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Libraries/: CMakeLists.txt
GeneralsMD/Code/Main/: CMakeLists.txt  RTS.RC  WinMain.cpp  WinMain.h  app.manifest  resource.h
GeneralsMD/Code/Tools/: CMakeLists.txt
cmake/: bink.cmake  compilers.cmake  config-build.cmake  config-debug.cmake  config-memory.cmake  config.cmake  debug_strip.cmake  deja_insight.cmake  dx8.cmake  gamespy.cmake  lzhl.cmake  miles.cmake  mingw.cmake  reactos-atl.cmake  registry.cmake  stlport.cmake  widl.cmake  zlib.cmake
cmake/toolchains/: mingw-w64-i686.cmake
resources/: CMakeLists.txt
resources/dockerbuild/: Dockerfile  entrypoint.sh
resources/gitinfo/: git_watcher.cmake  gitinfo.cpp.in  gitinfo.h
resources/visualstudio/: asciistring.natvis  stllist.natvis  stlvector.natvis  unicodestring.natvis
scripts/: docker-build.sh  docker-install.sh  dockerbuild.sh  fix_compile_commands.py  run-clang-tidy.py
scripts/clang-tidy-plugin/: CMakeLists.txt  GeneralsGameCodeTidyModule.cpp  GeneralsGameCodeTidyModule.h  README.md
scripts/clang-tidy-plugin/readability/: UseIsEmptyCheck.cpp  UseIsEmptyCheck.h  UseThisInsteadOfSingletonCheck.cpp  UseThisInsteadOfSingletonCheck.h
scripts/cpp/: apply_code_formatting.py  fixInludesCase.sh  harmonize_linebreaks_pragmaonce.py  refactor_asciistring_unicodestring_instantiation.py  refactor_debug_log_newline.py  refactor_delete_instance.py  remove_duplicate_include_directives.py  remove_include_guards_pragma.py  remove_mscver_from_pragma.py  remove_rts_internal.py  replace_include_guards_with_pragma.py  unify_move_files.py
triplets/: x86-windows.cmake
(+1801 files in other folders)
